# myDataScienceJourney

./: .gitignore  .nojekyll  _quarto.yml  about.html  about.qmd  blogs.html  blogs.qmd  create_python_package.html  create_python_package.qmd  index.html  index.qmd  notes.html  notes.qmd  project.qmd  project_on_poverty_eradication.html  project_on_poverty_eradication.qmd  search.json  sitemap.xml  study.html  study.qmd
3D_deep_learning/: 01_data_formats.html  01_data_formats.qmd  02_coordination_systems.html  02_coordination_systems.qmd  03_rendering.html  03_rendering.qmd  04_fitting_deformable_mesh_to_point.html  04_fitting_deformable_mesh_to_point.qmd  05_differentiable_rendering.html  05_differentiable_rendering.qmd  06_Differentiable_volumetric_rendering.html  06_Differentiable_volumetric_rendering.qmd  06_nerf.html  06_nerf.qmd  07_gan_based_image_synthesis.html  07_gan_based_image_synthesis.qmd  3d_data_formats.qmd  resources.html  resources.qmd
Images/: flipping_labels.html
Interesting_packages/: 01_pandas_coding_assistant.html  01_pandas_coding_assistant.qmd
Interpretable_ml/interpret_ai/: latest_model.gamchanger  pyproject.toml
Interpretable_ml/interpret_ai/interpret_ai/data/: model.json  modified_model.gamchanger  sample.json
Interpretable_ml/interpret_ai/notebooks/: 01_ebm.html  01_ebm.ipynb  02_gamchanger.html  02_gamchanger.ipynb  03_rulefit.html  03_rulefit.ipynb
Interview_resources/: resources.html  resources.qmd
Time Series/: 01_overview.html  01_overview.qmd  01_overview.tex  02_exploratory_analysis.html  02_exploratory_analysis.qmd  (+8 more)
(+833 files in other folders)
